<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBg">

        <LinearLayout
            android:id="@+id/llHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgBackBtn"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:padding="5dp"
                android:src="@drawable/ic_back_btn"/>

            <TextView
                android:id="@+id/tvLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/screen_title_forgot_password"
                android:fontFamily="@font/ubuntu_bold"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_12ssp"/>

        </LinearLayout>

        <TextView
            android:id="@+id/tvInstructions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/llHeader"
            android:layout_marginTop="100dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:gravity="center"
            android:fontFamily="@font/ubuntu_regular"
            android:text="@string/title_instructions"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_10ssp"/>

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/bg_round_input_box"
            android:hint="@string/hint_email"
            android:layout_below="@id/tvInstructions"
            android:inputType="textEmailAddress"
            android:maxLength="50"
            android:paddingStart="15dp"
            android:paddingLeft="20dp"
            android:paddingEnd="12dp"
            android:fontFamily="@font/ubuntu_regular"
            android:paddingRight="12dp"
            android:textColor="@color/text_color_input_box"
            android:textColorHint="@color/hint_color_input_box"
            android:textSize="@dimen/_10ssp" />


        <Button
            android:id="@+id/btnSend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etEmail"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="70dp"
            android:background="@drawable/gradient_login_btn"
            android:text="@string/title_send_btn"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/_10ssp"
            android:fontFamily="@font/ubuntu_bold" />

        <RelativeLayout
            android:id="@+id/rlProgressLoading"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:background="#80000000"
            android:clickable="true"
            android:focusable="true"
            android:visibility="gone">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/animationView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:lottie_rawRes="@raw/loading"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"/>
        </RelativeLayout>

    </RelativeLayout>
</layout>