<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBg">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <ImageView
                android:id="@+id/imgLogo"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:src="@drawable/new_logo" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/imgLogo"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/bg_round_input_box"
                android:fontFamily="@font/ubuntu_regular"
                android:hint="@string/hint_email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:maxLength="50"
                android:paddingStart="15dp"
                android:paddingLeft="15dp"
                android:paddingEnd="12dp"
                android:paddingRight="12dp"
                android:textColor="@color/text_color_input_box"
                android:textColorHint="@color/hint_color_input_box"
                android:textSize="@dimen/_10ssp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etPasswordLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/etEmail"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="20dp"
                app:hintEnabled="false"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/bg_round_input_box"
                    android:fontFamily="@font/ubuntu_regular"
                    android:hint="@string/hint_password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:maxLength="50"
                    android:paddingStart="15dp"
                    android:paddingLeft="15dp"
                    android:paddingEnd="10dp"
                    android:paddingRight="10dp"
                    android:textColor="@color/text_color_input_box"
                    android:textColorHint="@color/hint_color_input_box"
                    android:textSize="@dimen/_10ssp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tvForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/etPasswordLayout"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/ubuntu_regular"
                android:text="@string/title_forgot_password"
                android:textColor="@color/text_color_title"
                android:textSize="@dimen/_10ssp" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvForgotPassword"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="60dp"
                android:background="@drawable/gradient_login_btn"
                android:fontFamily="@font/ubuntu_bold"
                android:text="@string/title_login_btn"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/_10ssp" />

            <TextView
                android:id="@+id/tvLoginOrCreateAccountUsing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/btnLogin"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:text="@string/title_login_or_create_account_using"
                android:textColor="@color/text_color_title"
                android:textSize="@dimen/_10ssp"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/llSocial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvLoginOrCreateAccountUsing"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:orientation="horizontal"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/btnFB"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/bg_btn_white_circle"
                    android:src="@drawable/fb" />

                <ImageView
                    android:id="@+id/btnGoogle"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="30dp"
                    android:background="@drawable/bg_btn_white_circle"
                    android:src="@drawable/google" />

            </LinearLayout>

<!--            <Button-->
<!--                android:id="@+id/btnVisitAsGuest"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_below="@+id/llSocial"-->
<!--                android:layout_marginLeft="60dp"-->
<!--                android:layout_marginTop="25dp"-->
<!--                android:layout_marginRight="60dp"-->
<!--                android:background="@drawable/bg_round_white_corner_btn"-->
<!--                android:fontFamily="@font/ubuntu_bold"-->
<!--                android:text="@string/title_visit_as_guest_btn"-->
<!--                android:textColor="@color/colorWhite"-->
<!--                android:textSize="@dimen/_10ssp" />-->

            <TextView
                android:id="@+id/tvFAQ"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/btnLogin"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/ubuntu_bold"
                android:padding="10dp"
                android:text="@string/title_faq"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_10ssp" />

            <TextView
                android:id="@+id/tvTutorial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvFAQ"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/ubuntu_bold"
                android:padding="10dp"
                android:text="Tutorial"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_10ssp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tvBlinkShop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvTutorial"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/ubuntu_bold"
                android:padding="10dp"
                android:text="BlinkShop"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_10ssp"
                android:visibility="gone" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvDontHaveAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:text="@string/title_dont_have_account"
                android:textColor="@color/text_color_title"
                android:fontFamily="@font/ubuntu_regular"
                android:textSize="@dimen/_10ssp" />

            <TextView
                android:id="@+id/tvCreateAccountNow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginBottom="30dp"
                android:text="@string/title_create_account"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_10ssp"
                android:fontFamily="@font/ubuntu_bold" />

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/rlProgressLoading"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:background="#80000000"
            android:clickable="true"
            android:focusable="true"
            android:visibility="gone">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/animationView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:lottie_rawRes="@raw/loading"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"/>
        </RelativeLayout>

    </RelativeLayout>
</layout>